--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/node": "^18.15.10",
